@@ -1,20 +1,20 @@
 {:paths ["src" "resources"]
  :deps {org.clojure/clojure {:mvn/version "1.9.0"} ;; min clojure version
-        babashka/fs {:mvn/version "0.1.6"}
-        babashka/process {:mvn/version "0.1.7"}
+        babashka/fs {:mvn/version "0.2.12"}
+        babashka/process {:mvn/version "0.3.11"}
         clj-http/clj-http {:mvn/version "3.12.3"} ;; for jvm use
-        org.clj-commons/clj-http-lite {:mvn/version "0.4.392"} ;; for babashka use
+        org.clj-commons/clj-http-lite {:mvn/version "1.0.13"} ;; for babashka use
         cheshire/cheshire {:mvn/version "5.11.0"}
-        org.clojure/tools.cli {:mvn/version "1.0.206"}
+        org.clojure/tools.cli {:mvn/version "1.0.214"}
         org.clojure/tools.logging {:mvn/version "1.2.4"}}
  :aliases
  {:1.11 {:replace-deps {org.clojure/clojure {:mvn/version "1.11.1"}}}
   :debug {:extra-paths ["env/dev/resources"]}
   :test {:extra-paths ["test" "env/test/resources"]
          :extra-deps {io.github.cognitect-labs/test-runner {:git/tag "v0.5.1" :git/sha "dfb30dd"}
-                      ch.qos.logback/logback-classic {:mvn/version "1.3.0-alpha16"}
+                      ch.qos.logback/logback-classic {:mvn/version "1.4.5"}
                       ;; for http-client which uses apache http client 4.x which uses commons logging
-                      org.slf4j/jcl-over-slf4j {:mvn/version "2.0.0-alpha7"}}
+                      org.slf4j/jcl-over-slf4j {:mvn/version "2.0.5"}}
          :main-opts ["-m" "cognitect.test-runner"]}
   :script {:extra-paths ["script"]}
   ;; for babashka testing, needed for etaoin.ide
@@ -39,22 +39,23 @@
                           "-d" "target/test-doc-blocks/test"]}
 
   ;; for consistent linting we use a specific version of clj-kondo through the jvm
-  :clj-kondo {:extra-deps {clj-kondo/clj-kondo {:mvn/version "2022.08.03"}}
+  :clj-kondo {:extra-deps {clj-kondo/clj-kondo {:mvn/version "2022.11.02"}}
               :main-opts ["-m" "clj-kondo.main"]}
 
-  :build {:deps {io.github.clojure/tools.build {:git/tag "v0.8.3" :git/sha "0d20256"}
+  :build {:deps {io.github.clojure/tools.build {:git/tag "v0.8.5" :git/sha "9c738da"}
                  slipset/deps-deploy {:mvn/version "0.2.0"}}
           :ns-default build}
 
-  :outdated {:extra-deps {com.github.liquidz/antq {:mvn/version "1.9.874"}
-                          org.slf4j/slf4j-simple {:mvn/version "1.7.36"} ;; to rid ourselves of logger warnings
+  :outdated {:extra-deps {com.github.liquidz/antq {:mvn/version "2.2.962"}
+                          org.clojure/clojure {:mvn/version "1.11.1"}
+                          org.slf4j/slf4j-simple {:mvn/version "2.0.5"} ;; to rid ourselves of logger warnings
                           }
              :main-opts ["-m" "antq.core"]}
 
   :repl/cider
-  {:extra-deps {nrepl/nrepl                {:mvn/version "0.9.0"}
-                cider/cider-nrepl          {:mvn/version "0.28.5"}
-                refactor-nrepl/refactor-nrepl {:mvn/version "3.5.4"}}
+  {:extra-deps {nrepl/nrepl                {:mvn/version "1.0.0"}
+                cider/cider-nrepl          {:mvn/version "0.28.7"}
+                refactor-nrepl/refactor-nrepl {:mvn/version "3.6.0"}}
    :jvm-opts ["-XX:-OmitStackTraceInFastThrow"]
    :main-opts  ["-m" "nrepl.cmdline"
                 "--middleware" "[refactor-nrepl.middleware/wrap-refactor,cider.nrepl/cider-middleware]"
